2014-03-02 German Arias <germanandre@gmx.es>

	* PCAppController.m: For Windows add a menu with all types of projects.
	So the user can select directly the type of project he want.
	* Headers/ProjectCenter/PCProjectManager.h:
	* Framework/PCProjectManager.m: Add the neccesary changes to use the
	selected type of project at main menu (on Windows).
	* PCMenuController.m: Use the new method to make a new project.

2014-01-17 German Arias <germanandre@gmx.es>

	* English.lproj/ProjectCenter.gorm: Connect option "Line Number..."
	to first responder (I was sure I did this before, but no).

2014-01-13 Riccardo Mottola <rm@gnu.org>

	* Framework/PCFileManager.m
	* Headers/ProjectCenter/PCFileManager.h
	Convenience method to find executables, by Richard Frith-Macdonald

	* Modules/Preferences/Build/PCBuildPrefs.m
	* Modules/Preferences/Misc/PCMiscPrefs.m
	Use the convenience method to determine better defaults for make and gdb.

2013-12-17 Riccardo Mottola <rm@gnu.org>

	* Framework/PCProjectLauncher.m
	Check that the executable exists before running it.

2013-10-20 German Arias <germanandre@gmx.es>

	* English.lproj/Preferences.gorm:
	* Modules/Preferences/Build/Resources/BuildPrefs.gorm:
	* Modules/Preferences/EditorFSC/Resources/EditorFSCPrefs.gorm:
	* Modules/Preferences/Saving/Resources/SavingPrefs.gorm:
	* Modules/Preferences/Misc/Resources/MiscPrefs.gorm: Change the height
	of the panel.

2013-10-15 German Arias <germanandre@gmx.es>

	* TextFinder.h:
	* TextFinder.m: Deleted.
	* GNUmakefile: Remove TextFinder.
	* PCMenuController.m: Remove TextFinder. Now we use the standard
	menu Find.

2013-10-13 German Arias <germanandre@gmx.es>

	* English.lproj/ProjectCenter.gorm: Use the standard menu Find and
	connect option "Line Number..." to first responder.
	* Modules/Editors/ProjectCenter/PCEditor.m: Use Find panel.
	* Headers/PCMenuController.h:
	* PCMenuController.m: Remove unnecessary methods.

2013-10-06 German Arias <germanandre@gmx.es>
